<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>siha_camera_pkg</name>
  <version>0.1.0</version>
  <description>Savaşan İHA Optimize Kamera Paketi</description>
  <maintainer email="teknofest@siha.com">Savaşan İHA Ekibi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend> 
  <depend>px4_msgs</depend>
  
  <depend>libopencv-dev</depend> 

  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>